--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,8 @@ p {
     color: white;
 }
 
+/* Décoration des 4 <a> de la nav +h1 */
+
 .main__div {
     display: flex;
     align-items: center;
@@ -40,6 +42,7 @@ h1 {
     color: white;
     font-size: 48px;
     padding: 5px;
+    border-radius: 5px;
 }
 
 .h1__point__strong {
@@ -47,9 +50,14 @@ h1 {
     font-size: 48px;
 }
 
-/* Décoration des 4 <a> de la nav +h1 */
+
 .h1__color {
     text-decoration: none;
+}
+
+.h1__f__strong:hover {
+    color: rgb(79, 175, 127);
+    background-color: white;
 }
 
 .white {
@@ -147,13 +155,22 @@ main {
     color: rgb(30, 29, 49);
     font-size: 32px;
     background-color: rgb(79, 175, 127);
-    padding: 5px;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.span__main__div__h2:hover  {
+    background-color:rgb(30, 29, 49);
+    color: rgb(79, 175, 127);
+    transition-delay: 0.5ms;
+    border-radius: 5px;
 }
 
 .span__point__main__div__h2 {
     color: rgb(79, 175, 127);
     font-size: 32px;
 }
+
 
 /* ######### PARTIE FOOTER ######### */
 
