--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -25,37 +25,10 @@
                 </a>
             </div>
             <div class="div__cat__header">
-                <p class="p__nav__header__1"> <a class="white" href="#">Accueil</a></p>
+                <p class="p__nav__header__1"> <a class="white" href="/">Accueil</a></p>
                 <p class="p__nav__header__2"> <a class="white" href="#">A propos</a></p>
                 <p class="p__nav__header__3"> <a class="white" href="#">Mes réalisations</a></p>
                 <p class="p__nav__header__4"><a class="blue" href="#">Contactez-moi</a></p>
             </div>
         </div>
     </header>
-
-    <!--####### MAIN + DIV RESEAUX  #######-->
-    <main>
-
-        <div class="div__main__intro">
-            <h2 class="h2__div__main">Développeur web <br> <span class="span__main__div__h2">Orienté back-end</span> <span class="span__point__main__div__h2">. . .</span> </h2>
-            
-        </div>
-
-        <div class="div__socialmedia">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-        </div>
-
-    </main>
-
-    <!--####### FOOTER  #######-->
-
-    <footer>
-        <p class="p__footer"> © Fred Meziere - 2023</p>
-    </footer>
-
-
-</body>
-
-</html>
