Passage sous express + ejs + dotenv. correction des soucis lié à https dans index.js (ajout de différents fichiers pour les vues + et modification du routeur et controller)

--- a/app/views/main/accueil.ejs
+++ b/app/views/main/accueil.ejs
@@ -1,5 +1,5 @@
 
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 
     <!--####### MAIN + DIV RESEAUX  #######-->
     <main>
@@ -15,4 +15,4 @@
             <img src="" alt="">
         </div>
 
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
