Ajout des différentes routes au router

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -26,7 +26,7 @@
             </div>
             <div class="div__cat__header">
                 <p class="p__nav__header__1"> <a class="white" href="/">Accueil</a></p>
-                <p class="p__nav__header__2"> <a class="white" href="#">A propos</a></p>
+                <p class="p__nav__header__2"> <a class="white" href="/apropos">A propos</a></p>
                 <p class="p__nav__header__3"> <a class="white" href="#">Mes réalisations</a></p>
                 <p class="p__nav__header__4"><a class="blue" href="#">Contactez-moi</a></p>
             </div>
