Ajout des différentes pages (ejs + ajout des partials) modification des routes

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -25,10 +25,10 @@
                 </a>
             </div>
             <div class="div__cat__header">
-                <p class="p__nav__header__1"> <a class="white" href="/">Accueil</a></p>
+                <p class="p__nav__header__1"> <a class="white" href="/main">Accueil</a></p>
                 <p class="p__nav__header__2"> <a class="white" href="/apropos">A propos</a></p>
-                <p class="p__nav__header__3"> <a class="white" href="#">Mes réalisations</a></p>
-                <p class="p__nav__header__4"><a class="blue" href="#">Contactez-moi</a></p>
+                <p class="p__nav__header__3"> <a class="white" href="/realisations">Mes réalisations</a></p>
+                <p class="p__nav__header__4"><a class="blue" href="/contact">Contactez-moi</a></p>
             </div>
         </div>
     </header>
