Ajout d'un fichier css pour le 404 modification de la vue 404 modifications diverses de html/css

--- a/app/views/main/accueil.ejs
+++ b/app/views/main/accueil.ejs
@@ -7,11 +7,22 @@
         <div class="div__main__intro">
             <h2 class="h2__div__main">Développeur web <br><span class="span__main__div__h2">Orienté back-end</span> <span class="span__point__main__div__h2">. . .</span> </h2>
         </div>
-  
+
         <div class="div__socialmedia">
             <img src="" alt="">
             <img src="" alt="">
+            
             <img src="" alt="">
         </div>
 
 <%- include('../partials/footer') %>
+
+
+<!-- 
+SI vous avez eu la gentilesse d'aller jusque dans le code du site, MERCI!
+Je suis à la recherche d'une entreprise pour effectuer une alternance sur 12 ou 16 mois (en fonction de l'école choisie)
+Sur Marseille/Aubagne/ La ciotat etc.
+Mon linkedin : https://www.linkedin.com/in/fred-meziere/ 
+
+Bonne journée !
+-->
