--- a/app/views/error/404.ejs
+++ b/app/views/error/404.ejs
@@ -1,6 +1,18 @@
 <%- include('../partials/header') %>
+<link rel="stylesheet" href="./css/404.css">
 
-<p class="title">Tu t'es perdu ?</p>
-<p class="text text--center"><a class="link" href="/">retour à l'accueil</a></p>
+<div class="main__div__404">
+
+<p class="p__404">Oups il semblerait que quelque chose n'ai pas fonctionné !</p>
+
+<p class="p__404">Malheuresement FRED n'est pas encore a 100% formé et peut encore commettre des erreurs! C'est pourquoi il est à la recherche d"une alternance</p>
+
+<p class="p__404">https://www.linkedin.com/in/fred-meziere/ </p>
+
+<img src="" alt="">
+
+<p class="p__404"><a class="link" href="/main">Retour à l'accueil</a></p>
+
+</div>
 
 <%- include('../partials/footer') %>
