Ajout de la page 404 + son css (des modifications à venir)

--- a/app/views/error/404.ejs
+++ b/app/views/error/404.ejs
@@ -5,13 +5,15 @@
 
 <p class="p__404">Oups il semblerait que quelque chose n'ai pas fonctionné !</p>
 
-<p class="p__404">Malheuresement FRED n'est pas encore a 100% formé et peut encore commettre des erreurs! C'est pourquoi il est à la recherche d"une alternance</p>
+<p class="p__404">Malheuresement FRED n'est pas encore a 100% formé  des erreurs! C'est pourquoi il est à la recherche d"une alternance.</p>
 
-<p class="p__404">https://www.linkedin.com/in/fred-meziere/ </p>
+<p class="p__404">Une alternance entre 12 et 16 mois pour consolider ses acquis et obtenir de l'expérience professionnelle.</p>
 
-<img src="" alt="">
+<img src="../images/404.png" alt="404 error">
 
-<p class="p__404"><a class="link" href="/main">Retour à l'accueil</a></p>
+<p class="p__404__linkedin"><a class="link__linkedin__404" href="https://www.linkedin.com/in/fred-meziere/" target="_blank">LinkedIn </a></p>
+
+<p class="p__404__main"><a class="link__main__404" href="/main" >Retour à l'accueil</a></p>
 
 </div>
 
