--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -20,15 +20,15 @@
     <header>
         <div class="main__div">
             <div>
-                <a class="h1__color" href="#">
+                <a class="h1__color" href="/main">
                     <h1><span class="h1__f__strong">F</span>red<span class="h1__point__strong">.</span></h1>
                 </a>
             </div>
             <div class="div__cat__header">
-                <p class="p__nav__header__1"> <a class="white" href="/main">Accueil</a></p>
-                <p class="p__nav__header__2"> <a class="white" href="/apropos">A propos</a></p>
-                <p class="p__nav__header__3"> <a class="white" href="/realisations">Mes réalisations</a></p>
-                <p class="p__nav__header__4"> <a class="blue" href="/contact">Contactez-moi</a></p>
+                <p class="p__nav__header__1"> <a class="nav__1" href="/main">Accueil</a></p>
+                <p class="p__nav__header__2"> <a class="nav__2" href="/apropos">A propos</a></p>
+                <p class="p__nav__header__3"> <a class="nav__3" href="/realisations">Mes réalisations</a></p>
+                <p class="p__nav__header__4"> <a class="nav__4" href="/contact">Contactez-moi</a></p>
             </div>
         </div>
     </header>
