Passage des fichiers css en scss pour gagner en praticité et pour faire un code html plus propre. Ajout de la page formulaire et de son css

--- a/app/views/main/contact.ejs
+++ b/app/views/main/contact.ejs
@@ -1,4 +1,32 @@
 <%- include('../partials/header') %>
 
+    <div class="contactez-nous">
+        <h1>Contactez-moi ici.</h1>
+        <p>Vous pouvez également me contacter sur <a  class="linkedin__link" href="https://www.linkedin.com/in/fred-meziere/" target="_blank">linkedin </a> </p>
+        <form action="/page-traitement-donnees" method="post">
+            <div>
+                <label for="nom">Votre nom</label>
+                <input type="text" id="nom" name="nom" placeholder="Martin" required>
+            </div>
+            <div>
+                <label for="email">Votre e-mail</label>
+                <input type="email" id="email" name="email" placeholder="monadresse@mail.com" required>
+            </div>
+            <div>
+                <label for="email">Motif de votre contact</label>
+                <input type="text" id="email" name="email" placeholder="Votre profil m'intérrese " required>
+            </div>
+            <div>
+                <label for="message">Votre message</label>
+                <textarea id="message" name="message"
+                    placeholder="Votre message ici" required></textarea>
+            </div>
+            <div>
+                <button type="submit">Envoyer mon message</button>
+            </div>
+        </form>
+    </div>
 
-<%- include('../partials/footer') %>
+
+
+    <%- include('../partials/footer') %>
