--- a/app/views/error/404.ejs
+++ b/app/views/error/404.ejs
@@ -1,5 +1,7 @@
-<%- include('../partials/header') %>
-<link rel="stylesheet" href="./css/404.css">
+<head>
+    <%- include('../partials/header') %>
+    <link rel="stylesheet" href="./css/404.css">
+</head>
 
 <div class="main__div__404">
 
