--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -1,4 +1,6 @@
+@import './parameters.scss';
+@import './header.scss';
 @import './main.scss';
-/*@import './reset.scss';*/
 @import './404.scss';
 @import './form.scss';
+@import './footer.scss';
