--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,159 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    background: rgb(30, 29, 49);
-    font-family: 'Roboto Slab', serif;
-    display: flex;
-    flex-direction: column;
-    width: auto;
-}
-
-p {
-    color: white;
-}
-
-/* Décoration des 4 <a> de la nav +h1 */
-
-.main__div {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.div__cat__header {
-    width: 100vh;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-
-h1 {
-    margin-left: 15px;
-    color: white;
-    font-weight: bolder;
-
-}
-
-.h1__f__strong {
-    background: linear-gradient(15deg, rgba(76,150,107,1) 0%, rgba(79,175,127,1) 100%);
-    color: white;
-    font-size: 48px;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-.h1__point__strong {
-    color: rgb(79, 175, 127);
-    font-size: 48px;
-}
-
-
-.h1__color {
-    text-decoration: none;
-}
-
-.h1__f__strong:hover {
-    color: rgb(79, 175, 127);
-    background-color: white;
-}
-
-/*Acceuil */
-
-.p__nav__header__1 {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 22px;
-    border: 1px solid rgb(79, 175, 127);
-    border-radius: 5px;
-}
-
-.p__nav__header__1:hover{
-    background-color: rgb(79, 175, 127);
-    border-radius: 5px;
-    transition-delay: 0.15s;
-}
-
-.nav__1 {
-    color: white;
-    text-decoration: none;
-}
-
-/* A Propos */
-
-.p__nav__header__2 {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 22px;
-}
-.p__nav__header__2:hover{
-    background-color: rgb(79, 175, 127);
-    border-radius: 5px;
-    transition-delay: 0.15s;
-}
-
-.nav__2 {
-    color: white;
-    text-decoration: none;
-}
-
-
-/* Mes réalisations */
-
-.p__nav__header__3 {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 22px;
-}
-
-.p__nav__header__3:hover{
-    background-color: rgb(79, 175, 127);
-    border-radius: 5px;
-    transition-delay: 0.15s;
-}
-
-.nav__3 {
-    color: white;
-    text-decoration: none;
-}
-
-
-/* Contact */
-.p__nav__header__4 {
-    margin-right: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 22px;
-    border: 1px solid white;
-    border-radius: 5px;
-    
-}
-.p__nav__header__4:hover {
-    background-color: rgb(79, 175, 127);
-    border-radius: 5px;
-    
-}
-
-.nav__4 {
-    text-decoration: none;
-    color: rgb(79, 175, 127);
-}
-
-.p__nav__header__4:hover .nav__4 {
-    color: black;
-    background-color: rgb(79, 175, 127);
-    transition-delay: 0.15s;
-}
 
 
 /* ######### PARTIE MAIN ######### */
@@ -174,7 +18,7 @@ main {
     margin-top: 15px;
     padding-top: 220px;
     padding-bottom: 250px;
-    font-size: 96px;
+    font-size: 90px;
     border-radius: 15px;
     margin-left: 20px;
     margin-right: 20px;
@@ -183,36 +27,20 @@ main {
 .span__main__div__h2 {
     color: rgb(30, 29, 49);
     font-size: 32px;
-    background-color: rgb(79, 175, 127);
+    background-color: $primary-color;
     padding: 10px;
     border-radius: 5px;
 }
 
 .span__main__div__h2:hover  {
     background-color:rgb(30, 29, 49);
-    color: rgb(79, 175, 127);
+    color: $primary-color;
     transition-delay: 0.5ms;
     border-radius: 5px;
 }
 
 .span__point__main__div__h2 {
-    color: rgb(79, 175, 127);
+    color: $primary-color;
     font-size: 32px;
 }
 
-
-/* ######### PARTIE FOOTER ######### */
-
-footer {
-    background: linear-gradient(15deg, rgba(76,150,107,1) 0%, rgba(79,175,127,1) 100%);
-    position: absolute;
-    bottom: 0;
-    width: 99.5%;
-    text-align: center;
-    color: rgb(30, 29, 49);
-}
-
-.p__footer {
-    color: rgb(30, 29, 49);
-    font-weight: 600;
-}
