Ajout de nodemailer pour la gestion d'envois de mail à mon adresse mail, pour le moment non fonctionnel.

--- a/app/views/error/404.ejs
+++ b/app/views/error/404.ejs
@@ -7,7 +7,7 @@
 
 <p class="p__404">Oups il semblerait que quelque chose n'ai pas fonctionné !</p>
 
-<p class="p__404">Malheuresement FRED n'est pas encore a 100% formé  des erreurs! C'est pourquoi il est à la recherche d"une alternance.</p>
+<p class="p__404">Malheuresement FRED n'est pas encore a 100% formé! Il est à la recherche d"une alternance.</p>
 
 <p class="p__404">Une alternance entre 12 et 16 mois pour consolider ses acquis et obtenir de l'expérience professionnelle.</p>
 
