--- a/public/css/form.scss
+++ b/public/css/form.scss
@@ -5,6 +5,7 @@
     border-radius: 10px;
     padding: 0 50px 0 50px;
     margin: auto;
+    margin-top: 40px;
   }
   .linkedin__link {
     text-decoration: none;
@@ -43,6 +44,7 @@
     font-size: 16px;
     font-weight: 500;
     box-shadow: 0px 2px 2px 0px rgba(255, 255, 255, 0.25);
+    font-family: $font-family;
   }
   
   form div  input, form div  select {
