--- a/public/css/index.css
+++ b/public/css/index.css
@@ -237,6 +237,7 @@ img {
   border-radius: 10px;
   padding: 0 50px 0 50px;
   margin: auto;
+  margin-top: 40px;
 }
 
 .linkedin__link {
@@ -276,6 +277,7 @@ form div input, form div select, form div textarea {
   font-size: 16px;
   font-weight: 500;
   box-shadow: 0px 2px 2px 0px rgba(255, 255, 255, 0.25);
+  font-family: "Roboto Slab", serif;
 }
 
 form div input, form div select {
