ajout .env exemple + avancée sur le form

--- a/app/views/main/contact.ejs
+++ b/app/views/main/contact.ejs
@@ -4,25 +4,25 @@
         <h1>Contactez-moi ici.</h1>
         <p>Vous pouvez également me contacter sur <a class="linkedin__link"
                 href="https://www.linkedin.com/in/fred-meziere/" target="_blank">linkedin </a> </p>
-        <form action="http://localhost:3000/contact" method="post" class="formcontact">
+        <form action="http://localhost:3000/contact" method="post" class="form__contact">
             <div>
                 <label for="nom">Votre nom</label>
-                <input type="text" id="name" placeholder="Votre nom/prénom ici" required>
+                <input type="text" id="name" placeholder="Votre nom/prénom ici" >
             </div>
             <div>
                 <label for="email">Votre e-mail</label>
-                <input type="email"  id="email" placeholder="monadresse@mail.com" required>
+                <input type="email" id="email" placeholder="monadresse@mail.com" >
             </div>
             <div>
                 <label for="email">Motif de votre contact</label>
-                <input type="text" id="subject" placeholder="Sujet de votre message" required>
+                <input type="text" id="subject" placeholder="Sujet de votre message" >
             </div>
             <div>
                 <label for="message">Votre message</label>
-                <textarea id="message" placeholder="Votre message" required></textarea>
+                <textarea id="message" placeholder="Votre message"></textarea>
             </div>
             <div>
-                <button type="submit">Envoyer mon message</button>
+                <button type="submit" value="Send Message">Envoyer mon message</button>
             </div>
         </form>
     </div>
