--- a/app/views/main/contact.ejs
+++ b/app/views/main/contact.ejs
@@ -11,7 +11,7 @@
                     </div>
                     <div>
                 <label for="email">Votre e-mail</label>
-                <input type="email" id="email" placeholder="monadresse@mail.com" >
+                <input type="email" id="email" placeholder="Votreadresse@mail.com" >
             </div>
             <div>
                 <label for="email">Motif de votre contact</label>
