Ajout de scss/sass + html apropos

--- a/app/views/main/accueil.ejs
+++ b/app/views/main/accueil.ejs
@@ -2,10 +2,14 @@
 <%- include('../partials/header') %>
 
     <!--####### MAIN + DIV RESEAUX  #######-->
-    <main>
 
         <div class="div__main__intro">
-            <h2 class="h2__div__main">Développeur web <br><span class="span__main__div__h2">Orienté back-end</span> <span class="span__point__main__div__h2">. . .</span> </h2>
+            <h2 class="h2__div__main">Développeur web
+                <br>
+                <span class="span__2__main__div__h2">Fullstack JS</span>
+                <br>
+                <span class="span__main__div__h2">Orienté back-end</span> <span class="span__point__main__div__h2">. . .</span> 
+            </h2>
         </div>
 
         <div class="div__socialmedia">
@@ -19,10 +23,11 @@
 
 
 <!-- 
-SI vous avez eu la gentilesse d'aller jusque dans le code du site, MERCI!
+SI vous avez eu la gentilesse d'aller jusque dans l'inspecteur du site, MERCI!
 Je suis à la recherche d'une entreprise pour effectuer une alternance sur 12 ou 16 mois (en fonction de l'école choisie)
-Sur Marseille/Aubagne/ La ciotat etc.
+Sur Marseille/Aubagne/La ciotat etc.
 Mon linkedin : https://www.linkedin.com/in/fred-meziere/ 
+
 
 Bonne journée !
 -->
