--- a/app/views/main/apropos.ejs
+++ b/app/views/main/apropos.ejs
@@ -1,5 +1,36 @@
 <%- include('../partials/header') %>
 
-<p>hhh</p>
+    <main>
+        <div>
+            <p>
+                Bonjour, moi c'est Fred.
+            </p>
+            <p>
+                J'ai 25 ans, je vis dans le sud depuis 2 ans.
+            </p>
+            <p>
+                J'ai un bac STI2D en poche, j'ai aussi passer un cap ébéniste. Et je suis actuellement au sein de l'école
+                O'clock pour effectuer la formation : Développeur Fullstack JavaScript, pour mener à bien ma
+                reconversion profésionnelle.
+            </p>
+            <p>
+                J'ai eu la chance de faire deja beaucoup de choses dans ma vie, long séjour à l'étranger, 5ans en
+                Allemagne à Villingen, puis 2 ans à Djibouti dans la corne de l'Afrique.
+            </p>
+            <p>
+                J'ai pu explorer divers milieu profesionnels, en passant d'animateur en parc d'attraction en passant par
+                Macdonald's. Apres toutes ces expériences, il était temps de réélement trouver un metier qui me
+                plaisait. Naturellement je me suis diriger vers le dévelopement web ayant effectuer un bac informatique,
+                et aimant le codage, c'était le moment de concrétiser un projet solide.
+            </p>
+            <p>
+                
+            </p>
+        </div>
+    </main>
 
-<%- include('../partials/footer') %>
+    <div>
+
+
+
+        <%- include('../partials/footer') %>
