--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -16,12 +16,17 @@ main {
     text-align: center;
     background-color: black;
     margin-top: 15px;
-    padding-top: 220px;
-    padding-bottom: 250px;
+    padding-top: 190px;
+    padding-bottom: 190px;
     font-size: 90px;
     border-radius: 15px;
     margin-left: 20px;
     margin-right: 20px;
+}
+
+.span__2__main__div__h2 {
+    color: white;
+    font-size: 72px;
 }
 
 .span__main__div__h2 {
