--- a/public/css/index.css
+++ b/public/css/index.css
@@ -54,7 +54,8 @@ h1 {
 }
 
 .h1__f__strong:hover {
-  background-color: white;
+  background: white;
+  color: rgb(79, 175, 127);
 }
 
 /*Acceuil */
@@ -161,12 +162,17 @@ main {
   text-align: center;
   background-color: black;
   margin-top: 15px;
-  padding-top: 220px;
-  padding-bottom: 250px;
+  padding-top: 190px;
+  padding-bottom: 190px;
   font-size: 90px;
   border-radius: 15px;
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.span__2__main__div__h2 {
+  color: white;
+  font-size: 72px;
 }
 
 .span__main__div__h2 {
