Ajout de la div socialmedia, avec les différents liens reseaux + cv clickable. Ajout du début du scss

--- a/app/views/main/accueil.ejs
+++ b/app/views/main/accueil.ejs
@@ -12,22 +12,14 @@
             </h2>
         </div>
 
-        <div class="div__socialmedia">
-            <img src="" alt="">
-            <img src="" alt="">
-            
-            <img src="" alt="">
-        </div>
-
 <%- include('../partials/footer') %>
 
 
 <!-- 
 SI vous avez eu la gentilesse d'aller jusque dans l'inspecteur du site, MERCI!
 Je suis à la recherche d'une entreprise pour effectuer une alternance sur 12 ou 16 mois (en fonction de l'école choisie)
-Sur Marseille/Aubagne/La ciotat etc.
+Sur Marseille/Aubagne/La ciotat/ Aix si télétravail envisagable aprés etre bien formé et autonomeetc.
 Mon linkedin : https://www.linkedin.com/in/fred-meziere/ 
-
 
 Bonne journée !
 -->
