--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -1,5 +1,6 @@
 @import './parameters.scss';
 @import './header.scss';
+@import './bannersocialmedia.scss';
 @import './main.scss';
 @import './404.scss';
 @import './form.scss';
