--- a/public/css/index.css
+++ b/public/css/index.css
@@ -148,11 +148,10 @@ h1 {
 }
 
 .div__socialmedia {
-  opacity: 0.8;
+  position: absolute;
   background-color: rgb(79, 175, 127);
   display: flex;
   flex-direction: column;
-  position: absolute;
   left: 15px;
   top: 250px;
   max-width: 100px;
@@ -161,13 +160,14 @@ h1 {
 }
 
 .a__div__social {
-  align-items: center;
+  display: flex;
 }
 
 .p__div__socialmedia {
+  align-items: center;
   padding: 5px;
   margin: 0px;
-  text-align: center;
+  font-size: 12px;
 }
 
 .img__banner {
