Résolutions de soucis nodemailer en cours

--- a/app/views/error/404.ejs
+++ b/app/views/error/404.ejs
@@ -11,7 +11,7 @@
 
 <p class="p__404">Une alternance entre 12 et 16 mois pour consolider ses acquis et obtenir de l'expérience professionnelle.</p>
 
-<img src="../images/404.png" alt="404 error">
+<img class="error__404__image" src="../images/404.png" alt="404 error">
 
 <p class="p__404__linkedin"><a class="link__linkedin__404" href="https://www.linkedin.com/in/fred-meziere/" target="_blank">LinkedIn </a></p>
 
