--- a/app/views/main/apropos.ejs
+++ b/app/views/main/apropos.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
     <main>
-        <div>
+        <div class="main__div__apropos">
             <p>
                 Bonjour, moi c'est Fred.
             </p>
