--- a/public/css/404.scss
+++ b/public/css/404.scss
@@ -10,11 +10,12 @@
     color: white;
 }
 
-img {
+.error__404__image {
     margin: 20px;
     max-width: 20%;
     max-height: 20%;
 }
+
 .p__404__linkedin {
     margin-top: 70px;
 }
