--- a/public/css/index.css
+++ b/public/css/index.css
@@ -154,13 +154,15 @@ h1 {
   flex-direction: column;
   left: 15px;
   top: 250px;
-  max-width: 100px;
-  border-radius: 5px;
+  width: 80px;
+  border-radius: 15px;
   align-items: center;
 }
 
 .a__div__social {
-  display: flex;
+  align-items: center;
+  display: block;
+  margin-left: 1.5rem;
 }
 
 .p__div__socialmedia {
@@ -171,7 +173,9 @@ h1 {
 }
 
 .img__banner {
-  margin: 10px;
+  height: 50%;
+  width: 50%;
+  padding: 5px;
 }
 
 /* ######### PARTIE MAIN ######### */
@@ -234,7 +238,7 @@ main {
   color: white;
 }
 
-img {
+.error__404__image {
   margin: 20px;
   max-width: 20%;
   max-height: 20%;
